# index

./: Brewfile  CMakeLists.txt  LICENSE  README.md  bst.zig  index.cast  install.sh
.claude/: settings.local.json
.github/workflows/: bump-homebrew.yml
.index/memory/: index.md  research.md
Formula/: claudius.rb
agents/: backend.json  devops.json  frontend.json  marketer.json  research.json  researcher.json  reviewer.json  social.json
include/: agent.h  api_client.h  auth.h  cli.h  cli_helpers.h  commands.h  config.h  constitution.h  cost_tracker.h  json.h  loop_manager.h  markdown.h  orchestrator.h  readline_wrapper.h  server.h  title_generator.h
include/repl/: queues.h
include/tui/: line_editor.h  scroll_buffer.h  stream_filter.h  tui.h
scripts/: claudius-cli.sh  index-cli.sh
src/: agent.cpp  api_client.cpp  auth.cpp  cli.cpp  cli_helpers.cpp  commands.cpp  constitution.cpp  cost_tracker.cpp  json.cpp  loop_manager.cpp  main.cpp  markdown.cpp  orchestrator.cpp  readline_wrapper.cpp  server.cpp
src/repl/: queues.cpp
src/tui/: line_editor.cpp  stream_filter.cpp  tui.cpp
tests/: pty_harness.cpp  pty_harness.h  test_api_client.cpp  test_commands.cpp  test_line_editor.cpp  test_stream_filter.cpp  test_tui.cpp
